Let solid esper toolbar overflow the header to prevent squeezed panel group resizable.

--- a/src/stylesheets/components/_esper.scss
+++ b/src/stylesheets/components/_esper.scss
@@ -21,9 +21,12 @@
   .esper-header {
     position: relative;
     z-index: $zindex-esper-header;
+    height: $toolbar-height;
   }
 
   .toolbar {
+    position: absolute; // Let the toolbar overflow the header
+    width: 100%;
     box-sizing: content-box;
     padding-top: 0;
     height: $toolbar-height;
